@@ -3,6 +3,9 @@ ubuntu-dev-tools (0.120) UNRELEASED; urgency=low
   [ Felix Geyer ]
   * pull-lp-source.1: Document -d option.
 
+  [ Stefano Rivera ]
+  * ubuntutools.archive: Filter rmadison results. (LP: #710579)
+
  -- Stefano Rivera <stefanor@debian.org>  Wed, 02 Mar 2011 12:34:04 +0200
 
 ubuntu-dev-tools (0.119) unstable; urgency=low
